[TASK-0356] OAuth2UserInfoFactory 완료 + 도달 불가 커버리지 분기 근거를 코드 주석으로 문서화
- OAuth2UserInfoFactory: 실제 로직은 companion object에 이미 100% 커버돼 있었고, 미사용 기본 생성자만 별도 클래스로 집계돼 0%로 보이던 것을 인스턴스화 테스트 1줄로 해소, 100%/100%/100% 완료
- 사용자 요청에 따라 이번 세션에서 [i] 판정한 클래스들(DiagnosticService/SvnRepository/ReviewThreadServiceImpl/PullRequestMergeEventListener/OrganizationServiceImpl/ProjectUserServiceImpl/PostingServiceImpl/CodeReviewServiceImpl)의 "왜 95%를 못 넘는지" 근거를 COVERAGE_BACKLOG.md뿐 아니라 실제 소스 코드에도 주석으로 남김 — 향후 유지보수자가 문서를 찾아보지 않아도 코드만으로 이해 가능하도록